fix(observatory): chart colors dark mode

--- a/client/src/ui/base/_themes.scss
+++ b/client/src/ui/base/_themes.scss
@@ -508,16 +508,16 @@
   --observatory-fail-icon-color: rgba(255, 121, 155, 1);
   --observatory-table-bg: rgb(27, 27, 27);
   --observatory-table-header-bg: rgb(27, 27, 27);
-  --observatory-grade-a-bg: #2a664380;
-  --observatory-grade-a-border: #00ff6a80;
-  --observatory-grade-b-bg: #4e5a3580;
-  --observatory-grade-b-border: #a8ff0080;
-  --observatory-grade-c-bg: #b7ad5180;
-  --observatory-grade-c-border: #fff70080;
-  --observatory-grade-d-bg: #69461e80;
-  --observatory-grade-d-border: #ff6a0080;
-  --observatory-grade-f-bg: #5c262680;
-  --observatory-grade-f-border: #ff4d4d80;
+  --observatory-grade-a-bg: #265c3d;
+  --observatory-grade-a-border: #89fca1;
+  --observatory-grade-b-bg: #52662a;
+  --observatory-grade-b-border: #d5fc88;
+  --observatory-grade-c-bg: #66602a;
+  --observatory-grade-c-border: #fcf988;
+  --observatory-grade-d-bg: #5c3d26;
+  --observatory-grade-d-border: #ff6a00;
+  --observatory-grade-f-bg: #5c2626;
+  --observatory-grade-f-border: #fc8888;
   --observatory-arrow-down-color: rgba(255, 112, 127, 1);
   --observatory-arrow-up-color: rgba(0, 255, 106, 1);
 
